# sydneyAI

./: .env.example  .gitignore  1.py  README.md  agent.py  bot.py  config.py  enhanced_agent.py  pyproject.toml  requirements.txt  setup_check.py  utils.py
slack_agent/: bot.py
slack_agent/config/: settings.py
slack_agent/core/: agent.py  handler.py
slack_agent/models/: schemas.py
slack_agent/services/: cache.py  database.py  email.py  scheduler.py  shopify.py  social_media_manager.py
slack_agent/services/social/: facebook.py  instagram.py  linkedin.py  twitter.py
slack_agent/tools/: marketing_tools.py
slack_agent/utils/: helpers.py
